# setup-environment-Nick07242000

./: CMakeLists.txt
.github/: pull_request_template.md
include/: greetings.h  mathz.h
lib/libdin/include/: dynamic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: dynamic.h
lib/libdyn/src/: dynamic.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
lib/libsta/src/: static.c
lib/lybdin/src/: dynamic.c
src/: greetings.c  main.c  mathz.c
tests/: CMakeLists.txt
tests/unit/: demo_tests.c
